Examples to trigger can't redefine field error in Hudi